--- a/public/statics/admin/css/reset.scss
+++ b/public/statics/admin/css/reset.scss
@@ -1,3 +1,8 @@
+/*
+    定义变量
+*/
+/*作者(Author): 李潇喃    Website: www.muzisheji.com   QQ: 854378082*/
+@import "../../common/css/bootstrap.min.css";
 /*作者(Author): 李潇喃    Website: www.muzisheji.com   QQ: 854378082*/
 *, *:before, *:after {box-sizing: border-box; -webkit-box-sizing: border-box; -moz-box-sizing: border-box;}
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, caption, article, aside, audio, canvas, details, figcaption, figure, footer, header, hgroup, mark, menu, meter, nav, output, progress, section, summary, time, video {border:0;background:transparent;margin:0;padding:0;}
@@ -36,62 +41,54 @@ $color_3:#333;
 // 一些公用的
 .fz12 {font-size: 12px;}
 .dn {display: none;}
-.login-body {
-    background: #2b2f32 url('../images/login_bg.png') center center no-repeat; background-size: 726.3px 729.9px;
-}
-.login_box {
-    background: #FFF; width:345px; height:auto; margin:15% auto 0; padding: 50px 0 0; overflow: hidden; border-radius:5px;
-    .login-form {
-        padding:30px 35px;
+.login_bg {background: url('../images/login_bg.png') center center no-repeat; width:465px; height:442px; margin:60px auto 0; padding-top: 120px;}
+.login_box { margin:0 auto 0; width:330px; height:210px;
+    .login_form_left { background: #6DBFE4; font-size: 14px;color: #fff;width: 70px; display: block;line-height: 40px;padding-left: 10px; font-weight: normal; float: left; border-radius:3px 0px 0 3px;
     }
-    .login_form_right {float: right; background-color: #FFF; border:#CCCCCC solid 1px; display: block !important; line-height: 40px; height: 40px;
+    .login_form_right {float: right; background-color: #FFF; width:260px; border:#6DBFE4 solid 1px; display: block !important; line-height: 40px; height: 40px;
         font-size: 14px; border-radius:0 3px 3px 0;
     }
-    .input-group-addon {background: none;}
-    .input-group-addon img { max-width:unset;}
-    .login_submit {background: #04a8c5;border: none;width: 275px;display: block;line-height: 2.4; font-size: 16px; color: #fff;border-radius: 3px; margin-top: 20px;}
+    .login_submit {background: #6DBFE4;border: none;width: 330px;display: block;line-height: 2.4; font-size: 16px; color: #fff;border-radius: 3px;}
 }
 #success_alert ,#error_alert {position: fixed; top:30%; left:50%; width:30%; margin-left: -15%; text-align:center;z-index: 10000;}
 /* 主体框架 */
 body.box {overflow: hidden; padding: 0;}
 .mainbox { height: auto; min-height: 100%; position: relative;}
 /*top*/
-.top {height: 50px; line-height: 50px; background-color: #252A2F; color: #FFF; position: relative; top: 0; left: 0; width: 100%; z-index: 9999;}
+.top {height: 50px; line-height: 50px; background-color: #333; color: #FFF; position: relative; top: 0; left: 0; width: 100%; z-index: 9999;}
 .logo {font-weight: normal; float: left; width: 200px; font-size: 0; line-height: 0;margin:0; cursor:pointer;}
-.top a {color: #fff;}
+.top a {color: #9da4aa;}
 .menu ,#mainmenu { float: left; margin:0; padding:0;}
 #mainmenu li {float: left; width: 80px; font-size: 16px; font-weight:normal; text-align: center;}
 #mainmenu li a {display: block; cursor: pointer;}
-#mainmenu li a:hover {background: #131619; color:#FFF;}
-#mainmenu li a.active {background: #131619; color:#FFF;}
+#mainmenu li a:hover {background: #232930; color:#FFF;}
+#mainmenu li a.active {background: #232930; color:#FFF;}
 .userinfo {float: right; margin-right: 10px; font-size: 1rem; color:#eee;}
 .userinfo a {color: #ccc;}
 .userinfo a:hover {color: #FFF;}
 /*end top start left*/
-.leftbg {width: 200px; background-color: #D9DEE4; position: absolute; top: 0px; bottom: 0em; z-index: -1;}
+.leftbg {width: 200px; background-color: #DAD9DA; position: absolute; top: 0px; bottom: 0em; z-index: -1;}
 .left {width: 200px; float: left;margin-bottom: -10000px;padding-bottom: 10000px; padding-top:0px; position: fixed; color: #fff; overflow: hidden;}
-.left_tab_title {width:60px; overflow: hidden; text-align:center;background-color: #2b2f32;color:#FFF;margin-bottom: -10000px;padding-bottom: 10000px;
-    .glyphicon {display: block; width:60px; font-size: 18px; padding-top: 13px;}
-    .left_h3 {padding:10px 0; cursor: pointer; line-height: 1.6; font-weight: normal; margin:0; margin-top: 0px; font-size: 12px; color:#FFFFFF;}
-    .left_h3 .iconfont {font-size: 20px; line-height: 1.2;}
-    .left_h3.active {background:#00C1DE;}
+.left_tab_title {width:70px; overflow: hidden; text-align:center;background-color: #4FC0E8;color:#FFF;margin-bottom: -10000px;padding-bottom: 10000px;
+    .glyphicon {display: block; width:70px; font-size: 18px; padding-top: 10px;}
+    .left_h3 {height:70px; cursor: pointer; line-height: 3; font-weight: normal; margin:0;padding:0; margin-top: 10px; font-size: 14px; color:#FFFFFF;}
+    .left_h3.active {background: url('../images/left_l.png') center center no-repeat;}
 }
 .left_tab_content {
-    width:140px; overflow: hidden;background-color: #D9DEE4;margin-bottom: -10000px;padding-bottom: 10000px; color:#555;
-    .left_list {font-size:12px; margin: 0; text-indent:8px; padding:0;}
-    .left_list_icon {font-size: 18px; float: left;}
-    .left_list li {line-height: 40px; color:#555; line-height: 40px;}
-    .left_list li:hover {background: #F4F6F8;}
-    .left_list li.active {background: #ffffff; color: #333;}
+    width:130px; overflow: hidden;background-color: #F1F1F1;margin-bottom: -10000px;padding-bottom: 10000px; color:#555;
+    .left_list {font-size:12px; margin: 0; text-indent: 1.5em; padding:0;}
+    .left_list li {line-height: 40px; color:#555; line-height: 40px; background: url('../images/left_r1.png') 7px center no-repeat;}
+    .left_list li:hover {background: #F8F8F8 url('../images/left_r1.png') 7px center no-repeat;}
+    .left_list li.active {background: #DAD9DA url('../images/left_r.png') right top no-repeat; color: #333;}
     a {color:#555; padding-left: 0;}
-    .sub_menu_a {display: block; width:140px; color: #333;}
+    .sub_menu_a {float: left; display: block; width:130px; color: #333;}
     .left_list a.active { text-decoration: none; color: #333;}
 }
 /*end left start main*/
 .right {margin-left: 200px;}
 .main_title {font-weight: normal; margin:0; font-weight: 400; margin-right: 10px; display: inline-block; font-size: 16px;}
 .main_btn {margin-top: -2px;}
-.copyright {height: 24px;position: fixed; z-index: 100; bottom: 1px; left: 60px; width:140px; font-size:12px; line-height: 24px; text-align:center;color:#777;}
+.copyright {height: 24px;position: fixed; z-index: 100; bottom: 1px; left: 70px; width:130px; font-size:12px; line-height: 24px; text-align:center;color:#777;}
 .copyright a {color:#777;}
 /*end main*/
 form label {margin-bottom: 5px;}
@@ -108,7 +105,7 @@ form label {margin-bottom: 5px;}
 .input-xs {width:50px !important; float: left; margin-right: 10px;}
 .input-info {color:#999; span {margin-right: 5px;}}
 .help-block { font-weight: normal; display: block;color: red;}
-.add_submenu {margin-left: 10px; display: inline-block; font-size: 14px;}
+.add_submenu {margin-left: 10px;}
 .level-1 { font-size: 0;}
 .level-2 {padding-left: 1em;}
 .level-2:after { content:"├"; display:inline-block; margin-right: 5px;}
@@ -162,9 +159,6 @@ thead {font-weight: bold;}
 .file-item .progress { position: absolute; right: 4px; bottom: 4px; height: 3px; left: 4px; height: 4px; overflow: hidden; z-index: 15; margin:0; padding: 0;border-radius: 0; background: transparent;}
 .file-item .progress span { display: block; overflow: hidden; width: 0; height: 100%; background: #d14 url(../images/progress.png) repeat-x; -webit-transition: width 200ms linear; -moz-transition: width 200ms linear; -o-transition: width 200ms linear; -ms-transition: width 200ms linear; transition: width 200ms linear;
     -webkit-animation: progressmove 2s linear infinite; -moz-animation: progressmove 2s linear infinite; -o-animation: progressmove 2s linear infinite; -ms-animation: progressmove 2s linear infinite; animation: progressmove 2s linear infinite; -webkit-transform: translateZ(0);
-}
-.file-item .file-panel {
-    width:20px; height:20px;
 }
 .file-item .file-panel .cancel {position: absolute; bottom: 4px; right: 4px; height: 20px; width:20px; line-height: 20px; text-align:center; color: white; overflow: hidden; white-space: nowrap; text-overflow : ellipsis; font-size: 16px; z-index: 12; cursor: pointer;}
 @-webkit-keyframes progressmove {
